--- a/src/themes/applied.css
+++ b/src/themes/applied.css
@@ -191,7 +191,7 @@ var {
 }
 
 code {
-  white-space: pre;
+  white-space: normal;
 }
 
 pre {
@@ -355,7 +355,8 @@ th {
 td,
 th {
   text-align: start;
-  padding: var(--wa-space-s);
+  padding: var(--wa-space-l) var(--wa-space-s);
+  vertical-align: top;
 }
 
 /* Definition lists */
